@@ -2,6 +2,7 @@ from ucommon 6.0.1 to 6.0.2
 - digest stream operators
 - auto memory erasing keystring and keyrandom template
 - common code shared for secure library
+- some fixes for gnutls support
 
 from ucommon 6.0.0 to 6.0.1
 - fixes for gnutls support
